--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,110 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body class="body">
-    <!-- HEADER -->
-    <include src="./partials/header.html"></include>
-
     <main class="main">
-      <include src="./partials/hero.html"></include>
+      <nav class="navigation">
+        <ul>
+          <li>
+            <button type="button" class="button button--white icon" data-home data-step="1">
+              <svg><use href="./img/icons.svg#home"></use></svg>
+            </button>
+          </li>
+          <li>
+            <button type="button" class="button button--white icon" data-goback data-step="1">
+              <svg><use href="./img/icons.svg#back"></use></svg>
+            </button>
+          </li>
+        </ul>
+      </nav>
+      <!--STEP 1 -->
+      <section class="section section--step step1 active">
+        <div class="container">
+          <div class="forBtn ta--c">
+            <button type="button" class="button button--white big" data-step="2">Kursbuch</button>
+            <button type="button" class="button button--white big" data-step="2">Arbeitsbuch</button>
+          </div>
+        </div>
+      </section>
+
+      <!--STEP 2 -->
+      <section class="section section--step step2">
+        <div class="container">
+          <div class="titleBox ta--c">
+            <h2 class="title title--h1">Kursbuch</h2>
+          </div>
+          <div class="forBtn ta--c js--lectionsList">
+            <button type="button" class="button button--white" data-step="3">Lection 1</button>
+            <button type="button" class="button button--white" data-step="3">Lection 2</button>
+            <button type="button" class="button button--white" data-step="3">Lection 3</button>
+            <button type="button" class="button button--white" data-step="3">Lection 4</button>
+            <button type="button" class="button button--white" data-step="3">Lection 5</button>
+            <button type="button" class="button button--white" data-step="3">Lection 6</button>
+            <button type="button" class="button button--white" data-step="3">Lection 7</button>
+            <button type="button" class="button button--white" data-step="3">Lection 8</button>
+            <button type="button" class="button button--white" data-step="3">Lection 9</button>
+            <button type="button" class="button button--white" data-step="3">Lection 10</button>
+            <button type="button" class="button button--white" data-step="3">Lection 11</button>
+            <button type="button" class="button button--white" data-step="3">Lection 12</button>
+            <button type="button" class="button button--white" data-step="3">Lection 13</button>
+            <button type="button" class="button button--white" data-step="3">Lection 14</button>
+            <button type="button" class="button button--white" data-step="3">Lection 15</button>
+            <button type="button" class="button button--white" data-step="3">Lection 16</button>
+            <button type="button" class="button button--white" data-step="3">Lection 17</button>
+          </div>
+        </div>
+      </section>
+
+      <!--STEP 3 -->
+      <section class="section section--step step3">
+        <div class="container">
+          <div class="titleBox ta--c">
+            <h2 class="title title--h1">LECTION NAME</h2>
+          </div>
+          <div class="forBtn ta--c js--aufgabeList">
+            <button type="button" class="button button--white icon" data-home data-step="4"><span>1a</span></button>
+            <button type="button" class="button button--white icon" data-home data-step="4"><span>1b</span></button>
+            <button type="button" class="button button--white icon" data-home data-step="4"><span>2</span></button>
+            <button type="button" class="button button--white icon" data-home data-step="4"><span>3</span></button>
+            <button type="button" class="button button--white icon" data-home data-step="4"><span>4a</span></button>
+            <button type="button" class="button button--white icon" data-home data-step="4"><span>4b</span></button>
+            <button type="button" class="button button--white icon" data-home data-step="4"><span>4c</span></button>
+            <button type="button" class="button button--white icon" data-home data-step="4"><span>4d</span></button>
+          </div>
+        </div>
+      </section>
+
+      <!--STEP 4 -->
+      <section class="section section--step step4">
+        <div class="container">
+          <div class="titleBox ta--c">
+            <h2 class="title title--h1">Aufgabe number</h2>
+          </div>
+          <div class="antworten js--antwortenList">
+            <div class="antwort">
+              <span>1</span>
+              <p>richtig</p>
+            </div>
+            <div class="antwort">
+              <span>2</span>
+              <p>false</p>
+            </div>
+            <div class="antwort">
+              <span>3</span>
+              <p>richtig</p>
+            </div>
+            <div class="antwort">
+              <span>4</span>
+              <p>richtig</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <!-- FOOTER -->
-    <include src="./partials/footer.html"></include>
-    <!-- POPUPS -->
-    <include src="./partials/popups.html"></include>
+    <div class="preloader">
+      <div class="preloader__content">
+        <svg class="icon-search"><use href="./img/icons.svg#logo"></use></svg>
+      </div>
+    </div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
