--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
       <section class="section section--step step1 active">
         <div class="container">
           <div class="forBtn ta--c">
-            <button type="button" class="button button--white big" data-step="2">Kursbuch</button>
-            <button type="button" class="button button--white big" data-step="2">Arbeitsbuch</button>
+            <button type="button" class="button button--white big" data-step="2" data-base="kb">Kursbuch</button>
+            <button type="button" class="button button--white big" data-step="2" data-base="ab">Arbeitsbuch</button>
           </div>
         </div>
       </section>
@@ -37,27 +37,9 @@
       <section class="section section--step step2">
         <div class="container">
           <div class="titleBox ta--c">
-            <h2 class="title title--h1">Kursbuch</h2>
+            <h2 class="title title--h1">Themen:</h2>
           </div>
-          <div class="forBtn ta--c js--lectionsList">
-            <button type="button" class="button button--white" data-step="3">Lection 1</button>
-            <button type="button" class="button button--white" data-step="3">Lection 2</button>
-            <button type="button" class="button button--white" data-step="3">Lection 3</button>
-            <button type="button" class="button button--white" data-step="3">Lection 4</button>
-            <button type="button" class="button button--white" data-step="3">Lection 5</button>
-            <button type="button" class="button button--white" data-step="3">Lection 6</button>
-            <button type="button" class="button button--white" data-step="3">Lection 7</button>
-            <button type="button" class="button button--white" data-step="3">Lection 8</button>
-            <button type="button" class="button button--white" data-step="3">Lection 9</button>
-            <button type="button" class="button button--white" data-step="3">Lection 10</button>
-            <button type="button" class="button button--white" data-step="3">Lection 11</button>
-            <button type="button" class="button button--white" data-step="3">Lection 12</button>
-            <button type="button" class="button button--white" data-step="3">Lection 13</button>
-            <button type="button" class="button button--white" data-step="3">Lection 14</button>
-            <button type="button" class="button button--white" data-step="3">Lection 15</button>
-            <button type="button" class="button button--white" data-step="3">Lection 16</button>
-            <button type="button" class="button button--white" data-step="3">Lection 17</button>
-          </div>
+          <div class="forBtn ta--c js--lectionsList"></div>
         </div>
       </section>
 
@@ -65,18 +47,9 @@
       <section class="section section--step step3">
         <div class="container">
           <div class="titleBox ta--c">
-            <h2 class="title title--h1">LECTION NAME</h2>
+            <h2 class="title title--h1 js--lectionName">LECTION NAME</h2>
           </div>
-          <div class="forBtn ta--c js--aufgabeList">
-            <button type="button" class="button button--white icon" data-home data-step="4"><span>1a</span></button>
-            <button type="button" class="button button--white icon" data-home data-step="4"><span>1b</span></button>
-            <button type="button" class="button button--white icon" data-home data-step="4"><span>2</span></button>
-            <button type="button" class="button button--white icon" data-home data-step="4"><span>3</span></button>
-            <button type="button" class="button button--white icon" data-home data-step="4"><span>4a</span></button>
-            <button type="button" class="button button--white icon" data-home data-step="4"><span>4b</span></button>
-            <button type="button" class="button button--white icon" data-home data-step="4"><span>4c</span></button>
-            <button type="button" class="button button--white icon" data-home data-step="4"><span>4d</span></button>
-          </div>
+          <div class="forBtn ta--c js--aufgabeList"></div>
         </div>
       </section>
 
@@ -84,7 +57,7 @@
       <section class="section section--step step4">
         <div class="container">
           <div class="titleBox ta--c">
-            <h2 class="title title--h1">Aufgabe number</h2>
+            <h2 class="title title--h1"><span class="js--aufgabeKey">0</span></h2>
           </div>
           <div class="antworten js--antwortenList">
             <div class="antwort">
